[gd_scene load_steps=4 format=3 uid="uid://clbp02afq3yde"]

[ext_resource type="Script" path="res://chocolate/chocolate.gd" id="1_alwcb"]
[ext_resource type="Texture2D" uid="uid://dce0nvmb3f6id" path="res://chocolate/chocolate.png" id="1_mor37"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yby3i"]
size = Vector2(75, 32)

[node name="Chocolate" type="Area2D"]
z_index = 12
z_as_relative = false
collision_layer = 3
collision_mask = 3
script = ExtResource("1_alwcb")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.08, 0.08)
texture = ExtResource("1_mor37")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, 0)
shape = SubResource("RectangleShape2D_yby3i")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
